# HooreyGen

./: CMakeLists.txt  Deformer.cc  README.md  fileGen.cc  idConvert.txt  mrcp_am.tgf
include/: PhantomAnimator.hh  functions.h
src/: PhantomAnimator.cc  functions.cc
